v0.2.1/documentation/docs/toc.md
# TOC


```blockscape
{
  "id": "blockscape",
  "title": "Blockscape (AI maps)",
  "abstract": "Blockscape (pronounced BYK-shed) visualizes value chains and dependencies using a BS file. Inspired by Wardley maps, these maps emphasizes the topology that makes maps useful.",
  "categories": [
    {
      "id": "communication",
      "title": "Communication",
      "items": [
        {
          "id": "gestalt",
          "name": "Visualise to understand",
          "external": "../documentation/gestalt/",
          "deps": []
        },
        {
          "id": "value-chain",
          "name": "Visible value ↑↓",
          "external": "../documentation/value-chain/",
          "deps": []
        },
        {
          "id": "evolution",
          "name": "Evolution maturity ← →",
          "external": "../documentation/evolution/",
          "deps": []
        },
        {
          "id": "relational-awareness",
          "name": "Relations",
          "external": "../documentation/relational-awareness/",
          "deps": []
        },
        {
          "id": "icons",
          "name": "Icons",
          "external": "../documentation/icons/",
          "deps": []
        }
      ]
    },
    {
      "id": "experience",
      "title": "User Experience",
      "items": [
        {
          "id": "paste-bs-file",
          "name": "Paste (cmd-v)",
          "external": "../documentation/paste/",
          "deps": [
            "bs-format-simple"
          ]
        },
        {
          "id": "load-multidoc-file",
          "name": "Series",
          "external": "../documentation/series/",
          "deps": [
            "bs-format-simple"
          ]
        },
        {
          "id": "create-gist-multidoc",
          "name": "Gist",
          "external": "../documentation/gists/",
          "deps": [
            "gists",
            "bs-format-simple"
          ]
        },
        {
          "id": "abstract-gist-loading",
          "name": "Links",
          "external": "../documentation/gists/",
          "deps": [
            "gists",
            "bs-format-simple"
          ]
        },
        {
          "id": "model-collection",
          "name": "Portfolio",
          "external": "../documentation/portfolio/",
          "deps": [
            "apicurio",
            "bs-format-simple"
          ]
        }
      ]
    },
    {
      "id": "authoring-ai",
      "title": "Authoring (LLM)",
      "items": [
        {
          "id": "bs-format-simple",
          "name": "BS Schema",
          "external": "../documentation/models/",
          "deps": []
        },
        {
          "id": "stages",
          "name": "Center stages",
          "external": "../documentation/stages/",
          "deps": [
            "bs-format-simple"
          ]
        },
        {
          "id": "editor-human-terms",
          "name": "Edit",
          "external": "../documentation/editor/",
          "deps": [
            "bs-format-simple",
            "gestalt"
          ]
        },
        {
          "id": "../documentation/llm-generation/",
          "name": "LLM generates BS",
          "external": "../documentation/llm-generation/",
          "deps": [
            "bs-format-simple"
          ]
        },
        {
          "id": "llm-consume-bs",
          "name": "LLM consumes BS",
          "external": "../documentation/llm-consume/",
          "deps": [
            "bs-format-simple"
          ]
        },
        {
          "id": "move-items",
          "name": "Move: Shift ←↑↓→",
          "external": "../documentation/navigation/",
          "deps": []
        }
      ]
    },
    {
      "id": "platforms",
      "title": "Platforms",
      "items": [
        {
          "id": "gists",
          "name": "Gist",
          "logo": "https://favicon.im/github.com",
          "external": "../documentation/gists/",
          "deps": []
        },
        {
          "id": "../documentation/apicurio/",
          "name": "Apicurio",
          "logo": "https://www.google.com/s2/favicons?domain=apicur.io&sz=96",
          "external": "../documentation/apicurio/", 
          "deps": []
        },
        {
          "id": "../documentation/mkdocs/",
          "name": "MkDocs usage",
          "external": "../documentation/mkdocs/",
          "deps": []
        },
        {
          "id": "../documentation/share-links/",
          "name": "Share links",
          "external": "../documentation/share-links/",
          "deps": []
        }
      ]
    }
  ]
}
```
